# Discord-Gateway-Bot

./: .env.example  Cargo.toml
src/: main.rs
src/models/: client.rs  gateway.rs  identify.rs  interaction.rs  mod.rs  presence.rs
src/modules/: client.rs  gateway.rs
