[package]
name = "rust-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = { version = "0.13.0", features = ["tls"] }
tokio = { version = "1.32.0", features = ["full"] }
futures-util = "0.3.28"
serde_json = "1.0.107"
dotenvy = "0.15.7"
serde = { version = "1.0.104", features = ["derive"] }
futures = "0.3.30"
